# neural-networks-from-scratch

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.sh
.github/workflows/: deploy-gh-pages.yml
api/api_activations/: index.html
api/api_datasets/: index.html
api/api_layers/: index.html
api/api_losses/: index.html
api/api_model/: index.html
api/api_optimizers/: index.html
docs/: api_activations.md  api_layers.md  index.md  math_activations.md  math_losses.md
docs/api/: api_datasets.md  api_losses.md  api_model.md  api_optimizers.md
math_activations/: index.html
math_losses/: index.html
notebooks/: 0_gradients_prologue.ipynb  1_linear_regression.ipynb  2_binary_non-linear_classification.ipynb  3_multiclass_classification.ipynb  4_representation_learning.ipynb
notebooks/0_gradients_prologue/: index.html
notebooks/1_linear_regression/: index.html
notebooks/2_binary_non-linear_classification/: index.html
notebooks/3_multiclass_classification/: index.html
notebooks/4_representation_learning/: index.html
scripts/: run_tests.sh  setup.sh
search/: search_index.json
src/nnfs/: activations.py  layers.py  losses.py  model.py  optimizers.py  utils.py
src/nnfs/datasets/: data_generators.py  data_loaders.py
tests/: test_data_generators.py  test_models.py  test_utils.py
